Bug fix: layout bug when document width is between 956px and 977px

--- a/css/main.css
+++ b/css/main.css
@@ -71,7 +71,7 @@ body {
 	background: #ffffff;
 }
 
-@media (min-width: 970px) {
+@media (min-width: 992px) {
 	.result-block {
 		background: #ffffff url('../img/divider.png') repeat-y;
 		height: auto;
